[package]
name = "qraw"
version = "0.1.0"
edition = "2021"
authors = ["amatagonsk"]
license = "MIT"
description = "simple terminal drawing canvas."
repository = "https://github.com/amatagonsk/qraw"
keywords = ["draw", "terminal", "ratatui", "tui"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
color-eyre = "0.6"
crossterm = "0.28"
ratatui = "0.29"
itertools = "0.13"
regex = "1.11.1"